After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780278 - weather: Guard against segfault
weather: Guard against segfault
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: future
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2017-03-19 20:57 UTC by Florian Müllner
Modified: 2017-05-21 04:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
weather: Guard against segfault (1.53 KB, patch)
2017-03-19 20:57 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2017-03-19 20:57:26 UTC
See patch.
Comment 1 Florian Müllner 2017-03-19 20:57:33 UTC
Created attachment 348276 [details] [review]
weather: Guard against segfault

When GWeatherInfo:location is set to %NULL, the default location will
be used. Currently the code assumes that this fallback can always be
resolved, however find_by_station_code() may return %NULL, resulting
in a segfault.
Comment 2 Giovanni Campagna 2017-03-20 06:27:32 UTC
Review of attachment 348276 [details] [review]:

Looks good.
Comment 3 Florian Müllner 2017-03-20 09:37:40 UTC
Attachment 348276 [details] pushed as 61e0932 - weather: Guard against segfault
Comment 4 Jeremy Bicha 2017-05-21 04:28:42 UTC
Maybe we should have a tarball release with this fix?