weather: Guard against segfault

When GWeatherInfo:location is set to %NULL, the default location will
be used. Currently the code assumes that this fallback can always be
resolved, however find_by_station_code() may return %NULL, resulting
in a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=780278